<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_edit_coupon2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="0dp">

        <TextView
            android:id="@+id/edit_name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:hint="@string/cab_edit_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/edit_condition2"
            android:layout_width="265dp"
            android:layout_height="43dp"
            android:layout_below="@+id/edit_name2"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="6dp"
            android:hint="@string/cab_edit_condition"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="79dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="13dp"
            android:layout_marginRight="13dp"
            android:ems="10"
            android:gravity="center"
            android:inputType="text" />

        <TextView
            android:id="@+id/edit_description2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_condition2"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="4dp"
            android:hint="@string/cab_edit_restriction"
            android:textSize="12sp" />

    </RelativeLayout>


</android.support.v7.widget.CardView>